# hyfi

./: .buildinfo  .copier-config.yaml  .copierignore  .env  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .pylint.toml  .sourcery.yaml  .tasks-extra.toml  .tasks.toml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Makefile  README.md  api.html  codecov.yml  copier.yaml  examples.html  genindex.html  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml  usage.html
.copier-template/: .gitignore.jinja  .readthedocs.yaml.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Makefile.jinja  pyproject.toml.jinja  {% if documentaion_tool == 'mkdocs' %}mkdocs.yaml{% endif %}.jinja  {% if project_license == 'GPLv3' %}LICENSE{% endif %}.jinja  {% if project_license == 'MIT' %}LICENSE{% endif %}.jinja  {% if project_name != 'hyperfast-python-template' %}README.md{% endif %}.jinja
.copier-template/src/{{package_name}}/: __cli__.py.jinja
.copier-template/tests/{{package_name}}/: test_cli.py.jinja  test_init.py.jinja
.copier-template/{% if documentaion_tool == 'jupyter-book' %}book{% endif %}/: _config.yml.jinja  examples.md.jinja  index.md.jinja  requirements.txt
.copier-template/{% if documentaion_tool == 'mkdocs' %}docs{% endif %}/: index.md.jinja  {% if project_name == 'hyperfast-python-template' %}CNAME{% endif %}
.copier-template/{% if project_name != 'hyperfast-python-template' %}.github{% endif %}/workflows/: release.yaml
.github/workflows/: codeql.yml  deploy-docs.yaml  issue_metrics.yaml  lint_and_test.yaml  prerelease-to-test-pypi.yaml  prerelease.yaml  release-patch.yaml  release-test.yaml  release.yaml
_sources/: examples.ipynb  index.md
book/: _config.yml  _toc.yml  examples.ipynb  examples.md  index.md
config/pipe/: _test_dataframes_load.yaml  _test_dataframes_save.yaml  _test_preprocessing.yaml
config/pipeline/: __test_dataframe__.yaml  __test_general__.yaml
config/project/: __test__.yaml
config/run/: load_dataframes.yaml  preprocessing_esg_ratings.yaml  save_dataframes.yaml
config/runner/: __test__.yaml  test.yaml
config/test/: __inner__.yaml  __test__.yaml  __vars__.yaml
config/workflow/: __test__.yaml  __test_pipelines__.yaml
configs/: index.html
configs/about/: index.html
configs/batch/: index.html
configs/cmd/: index.html
configs/composer/: index.html
configs/copier/: index.html
configs/env/: index.html
configs/joblib/: index.html
configs/mode/: index.html
configs/module/: index.html
configs/path/: index.html
configs/pipe/: index.html
configs/pipeline/: index.html
configs/project/: index.html
configs/run/: index.html
configs/runner/: index.html
configs/task/: index.html
configs/variables/: index.html
configs/workflow/: index.html
docs/: CNAME  examples.md  index.md  requirements.txt
docs/configs/: about.md  batch.md  cmd.md  composer.md  copier.md  docs.md  dotenv.md  env.md  hydra.md  index.md  joblib.md  mode.md  module.md  path.md  pipe.md  pipeline.md  project.md  run.md  runner.md  running.md  task.md  variables.md  workflow.md
docs/reference/: about.md  cli.md  click.md  hydra.md  main.md
docs/reference/batch/: index.md
docs/reference/cached_path/: index.md
docs/reference/composer/: extended.md
docs/reference/config/: path.md
docs/reference/copier/: index.md
docs/reference/core/: config.md  index.md
docs/reference/dotenv/: index.md
docs/reference/env/: index.md
docs/reference/global/: config.md  config.py  index.md
docs/reference/graphics/: collage.md  index.md  motion.md  utils.md
docs/reference/joblib/: index.md
docs/reference/main/: config.md
docs/reference/module/: index.md
docs/reference/path/: batch.md  index.md
docs/reference/pipe/: index.md
docs/reference/pipeline/: config.md  configs.md  index.md
docs/reference/project/: index.md
docs/reference/run/: index.md
docs/reference/runner/: index.md
docs/reference/task/: batch.md  index.md
docs/reference/utils/: conf.md  datasets.md  env.md  envs.md  funcs.md  gpumon.md  index.md  iolibs.md  logging.md  notebooks.md  packages.md
docs/reference/workflow/: index.md
docs/usage/: envs.md
examples/: index.html
reference/about/: index.html
reference/batch/: index.html
reference/cli/: index.html
reference/click/: index.html
reference/composer/: index.html
reference/copier/: index.html
reference/core/: index.html
reference/env/: index.html
reference/graphics/: index.html
reference/joblib/: index.html
reference/main/: index.html
reference/module/: index.html
reference/path/: index.html
reference/pipe/: index.html
reference/pipeline/: index.html
reference/project/: index.html
reference/run/: index.html
reference/runner/: index.html
reference/task/: index.html
reference/utils/: index.html
reference/workflow/: index.html
scripts/: generate_config_docs.py
search/: search_index.json
src/hyfi/: __cli__.py  __click__.py  __init__.py  _version.py  env.py  hydra.py  main.py  project.toml
src/hyfi/__global__/: __init__.py  config.py
src/hyfi/about/: __init__.py  about.py
src/hyfi/batch/: __init__.py  batch.py
src/hyfi/cached_path/: __init__.py  file_lock.py  meta.py  progress.py  testing.py  util.py
src/hyfi/composer/: __init__.py  base.py  composer.py  config.py  docs.py  extended.py  generator.py  globals.py  help.py  model.py  pydantic.py  settings.py  utils.py
src/hyfi/conf/: config.yaml  hconf.yaml
src/hyfi/config/: __init__.py  batch.py  path.py
src/hyfi/copier/: __init__.py  copier.py
src/hyfi/core/: __init__.py  config.py  core.py  hydra.py
src/hyfi/dotenv/: __init__.py  dotenv.py
src/hyfi/env/: __init__.py  env.py
src/hyfi/graphic/: collage.py  motion.py  utils.py
tests/: tests.ipynb
tests/data/: data.txt
tests/hyfi/: env.test.py  test_cli.py  test_env.py  test_init.py  test_main.py  test_workflow.py
tests/notebooks/: test_HyFI.ipynb  test_widgets.ipynb  test_workflows.ipynb  test_zen.ipynb  tests.ipynb
usage/: index.html
usage/envs/: index.html
(+293 files in other folders)
